b=337381, button on dropdown lists is too skinny on linux, patch from ispiked@gmail.com, r=vladimir